Change more null checks to optionals; rename ParameterNode to ArgumentNode